# py-config-web-ui

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  UPDATE.md  VERSION.md  demo.py  download_static_files.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_tag_release.yml  check_release_pr.yml  gen_changelog_pr.yml  release.yml  verify_pr_head_branch.yml
configwebui/: __init__.py  __metadata__.py  app.py  config.py
configwebui/static/css/: index.css
configwebui/static/js/: index.js
configwebui/templates/: index.html
demo/: demo_main.py  demo_ui.py
demo/config/: main.json
demo/config/applicant_information/: Alice.json  Bob.json  Charlie.json
demo/config/reservation_detail/: Christmas.json  Special.json
demo/config/user_credential/: Alice.json  Bob.json
demo/schema/: applicant_information.json  main.json  reservation_detail.json  user_credential.json
examples/: demo.py
examples/schema/: general.json
src/configwebui/: __init__.py  runner.py  utils.py
utils/: README.md  check_tag.py  clean_build.py  clean_third_party_static_files.py  download_static_files.py
